# LLM_FROM_SCRATCH

./: .gitignore  README.md  pyproject.toml
data/processed/: vocab.json
data/raw/: input.txt
scripts/: infer.py  train.py
src/gpt_mini.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/llm/: __init__.py  attention.py  config.py  data.py  embeddings.py  model.py  transformer.py  utils.py
src/tinygpt/: __init__.py
