[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gpt-mini"  # package *name* on PyPI (local is fine)
version = "0.1.0"
description = "Tiny GPT-style language model from scratch"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Ikram" }
]

dependencies = [
  "torch",
  "numpy",
  "tqdm",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
